chore: change naming of tenderly files

--- a/tenderly/tenderly.yaml
+++ b/tenderly/tenderly.yaml
@@ -6,7 +6,7 @@ actions:
     specs:
       helloWorldTransactions:
         description: Transaction that recorded a fund withdrawal
-        function: hello:action
+        function: Rewardity:action
         trigger:
           type: transaction
           transaction:
