--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "dotenv": "^16.0.2",
+    "axios": "^1.0.0",
     "ethers": "^5.7.0",
     "framer-motion": "^7.2.1",
     "nft.storage": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router": "^6.4.1",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.2.21",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "zustand": "^4.1.1"
